small fix to the deck stuff!!

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="noclicky"></div>
     <div id="window-core" class="window" style="opacity: 0.5">
-      <div id="title">suwi-tcg<br/><span id="subtitle">ver. alpha-1</span></div>
+      <div id="title">suwi-tcg<br/><span id="subtitle">ver. alpha-1B</span></div>
       <div id="login">
         <div id="prelogin">
           <input id="login-username" class="login-input" placeholder="Username..." value="rivulet"> <!-- remember to erase this!! -->
